--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 
 @font-face {
   font-family: 'STXINGKA';
-  src: url("../fonts/STXINGKA.ttf");
+  src: url("../fonts/STXINGKA.TTF");
 }
 
 /* =======================================================
