--- a/css/style.css
+++ b/css/style.css
@@ -665,7 +665,7 @@ form label {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url(../images/loader1.gif) center no-repeat #fff;
+  background: url(../images/loading1.gif) center no-repeat rgb(25, 26, 26);
 }
 
 .js .animate-box {
