--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
   font-size: 16px;
   line-height: 1.7;
   color: #828282;
-  background: #fff;
+  background: rgb(0, 0, 0);
 }
 
 #page {
@@ -665,7 +665,7 @@ form label {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url(../images/loading1.gif) center no-repeat rgb(25, 26, 26);
+  background: url(../images/hue.gif) center no-repeat #000000;
 }
 
 .js .animate-box {
